Bug 111518 - PPTX with motion animation opens with repair in PowerPoint after roundtrip
Summary: PPTX with motion animation opens with repair in PowerPoint after roundtrip
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords: filter:pptx
: 95503 (view as bug list)
Depends on:
Blocks: PPTX-Corrupted
  Show dependency treegraph
 
Reported: 2017-08-08 16:47 UTC by Aron Budea
Modified: 2017-08-31 22:51 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample PPTX (29.75 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2017-08-08 16:48 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2017-08-08 16:47:48 UTC
The attached presentation contains a single shape with a simple motion animation.
Save it as a new PPTX in Impress. The resulting file opens with an error in PowerPoint.

Observed using LO 5.4.0.3 / Windows 7.
Comment 1 Aron Budea 2017-08-08 16:48:25 UTC
Created attachment 135307 [details]
Sample PPTX
Comment 2 Xisco Faulí 2017-08-08 17:11:22 UTC
Confirmed in

Versió: 6.0.0.0.alpha0+
ID de la construcció: 0342c5e8086c8200ecadbe9d52dd4ef6a093effb
CPU threads: 4; OS: Linux 4.10; UI render: per defecte; VCL: gtk3; 
Configuració local: ca-ES (ca_ES.UTF-8); Calc: group

Validating it in Open XML SDK 2.5 I get the following error:

Error Node type: ChildTimeNodeList
Error Description: The element has incomplete content
Comment 3 Commit Notification 2017-08-09 14:03:36 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=af4602e558431bcdf51d0f15e7e400adcd142738

tdf#111518 pptx: Add support for export of p:animMotion.

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2017-08-09 14:03:43 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=506bdf029379d63e79656c85df49e2c9cef0c16e

tdf#111518 pptx: Unit test.

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2017-08-09 14:24:59 UTC
*** Bug 95503 has been marked as a duplicate of this bug. ***
Comment 6 Xisco Faulí 2017-08-09 14:27:56 UTC
I cherry-picked the commit and it fixes the issue. I also found it fixes bug  95503. Great news ;-)
Comment 7 Commit Notification 2017-08-10 12:55:42 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ae717f2d722d78b29b51dc40194b64ab3bb5bc8

related tdf#111518 pptx: These attributes are not supposed to be here.

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Jan Holesovsky 2017-08-10 13:14:33 UTC
Fixed now.
Comment 9 Jan Holesovsky 2017-08-10 13:16:52 UTC
*** Bug 104784 has been marked as a duplicate of this bug. ***
Comment 10 Xisco Faulí 2017-08-31 22:51:04 UTC
Verified in

Version: 6.0.0.0.alpha0+
Build ID: 04d70c0999c716f5465631eca50945915ec607c4
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group