tdf#111518 pptx: Add support for export of p:animMotion.

Contains also the following patches:

tdf#111518 pptx: Unit test.
related tdf#111518 pptx: These attributes are not supposed to be here.

Change-Id: Idd5692c803b1e8d434abc0154419a341934d0753